assets/stylesheets/main.css
/* line 17, ../../../../../Ruby200/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

/* line 22, ../../../../../Ruby200/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
html {
  line-height: 1;
}

/* line 24, ../../../../../Ruby200/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
ol, ul {
  list-style: none;
}

/* line 26, ../../../../../Ruby200/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* line 28, ../../../../../Ruby200/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
caption, th, td {
  text-align: left;
  font-weight: normal;
  vertical-align: middle;
}

/* line 30, ../../../../../Ruby200/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
q, blockquote {
  quotes: none;
}
/* line 103, ../../../../../Ruby200/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
q:before, q:after, blockquote:before, blockquote:after {
  content: "";
  content: none;
}

/* line 32, ../../../../../Ruby200/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
a img {
  border: none;
}

/* line 116, ../../../../../Ruby200/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
  display: block;
}

/* line 18, ../sass/partials/_colors.scss */
.grey {
  background: #f6f6f6;
}

/* line 1, ../sass/layout/_base.scss */
*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

/* line 5, ../sass/layout/_base.scss */
html, body {
  height: 100%;
}

/* line 9, ../sass/layout/_base.scss */
body {
  font-family: "PT Sans", Helvetica, sans-serif;
  font-size: 0.875em;
  color: #515151;
  cursor: auto;
}

/* line 16, ../sass/layout/_base.scss */
a {
  color: #515151;
}
/* line 19, ../sass/layout/_base.scss */
a:hover {
  color: #00b4ff;
}

/* line 24, ../sass/layout/_base.scss */
.AddToMenu {
  position: absolute;
  background: #FFF;
  border: 1px solid #d3d3d3;
  border-radius: 4px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  width: 150px;
  z-index: 1100;
}
/* line 33, ../sass/layout/_base.scss */
.AddToMenu a {
  cursor: pointer;
}

/* line 1, ../sass/layout/_header.scss */
.header {
  background: #eeeeee;
  position: fixed;
  top: 0;
  height: 70px;
  z-index: 1010;
  border: 1px solid #d7d7d7;
  clear: both;
  width: 100%;
}

/* line 12, ../sass/layout/_header.scss */
.logo {
  width: 198px;
  background: #515151;
  float: left;
  height: 69px;
  margin: 0 25px 0 0;
}
/* line 19, ../sass/layout/_header.scss */
.logo img {
  margin: 20px 15px 20px 15px;
}

/* line 24, ../sass/layout/_header.scss */
.header-menu {
  padding: 17px 0 0 20px;
}

/* line 28, ../sass/layout/_header.scss */
.header-search {
  float: left;
}
/* line 32, ../sass/layout/_header.scss */
.header-search .text-input input {
  width: 250px;
  height: 35px;
  font-size: 0.875em;
}
/* line 39, ../sass/layout/_header.scss */
.header-search .search-btn {
  height: 35px;
  border-left: none;
  width: 40px;
}
/* line 45, ../sass/layout/_header.scss */
.header-search .text-input, .header-search .search-btn {
  float: left;
}

/* line 50, ../sass/layout/_header.scss */
.header-navigation {
  float: right;
  margin: 5px 15px 0 0;
}
/* line 55, ../sass/layout/_header.scss */
.header-navigation .user a {
  margin: 3px 0 0 8px;
}
/* line 59, ../sass/layout/_header.scss */
.header-navigation .user img {
  border: 1px solid #a7a1a1;
}
/* line 63, ../sass/layout/_header.scss */
.header-navigation .user a, .header-navigation .user img {
  float: left;
}
/* line 68, ../sass/layout/_header.scss */
.header-navigation .user {
  float: left;
}
/* line 72, ../sass/layout/_header.scss */
.header-navigation .user-nav {
  margin: 3px 0 0 0;
}
/* line 75, ../sass/layout/_header.scss */
.header-navigation .user-nav li {
  float: left;
  margin: 0 0 0 10px;
}

/* line 1, ../sass/layout/_sidebar.scss */
.sidebar {
  position: fixed;
  width: 200px;
  top: 70px;
  z-index: 1000;
  height: 100%;
  border-right: 1px solid #d7d7d7;
  border-left: 1px solid #d7d7d7;
}
/* line 10, ../sass/layout/_sidebar.scss */
.sidebar .heading {
  background: #eeeeee;
  height: 50px;
  padding: 15px;
}
/* line 15, ../sass/layout/_sidebar.scss */
.sidebar .heading h3 {
  font-size: 1.125em;
  color: #515151;
}
/* line 22, ../sass/layout/_sidebar.scss */
.sidebar .navigation li {
  height: 40px;
  padding: 12px 15px 12px 15px;
  border-bottom: 1px solid #eeeeee;
}
/* line 27, ../sass/layout/_sidebar.scss */
.sidebar .navigation li.selected {
  background: url("../img/selected_navigation_item.png") repeat-y scroll left center transparent;
}
/* line 31, ../sass/layout/_sidebar.scss */
.sidebar .navigation li a {
  color: #515151;
}
/* line 34, ../sass/layout/_sidebar.scss */
.sidebar .navigation li a:hover {
  color: #00b4ff;
}
/* ... */

